Minor revision on bower json files

--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
   "name": "AngularJs String Helper",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "authors": [
     "Rexon A. De los Reyes <rexondelosreyes88@gmail.com>"
   ],
   "description": "Just a string helper that helps _11042015",
-  "main": "angular-string-helper.js",
+  "main": "./angular-string-helper.js",
   "keywords": [
     "angular",
     "string",
