--- a/package.json
+++ b/package.json
@@ -1,4 +1,17 @@
 {
+  "name": "AngularJs String Helper",
+  "version": "1.0.0",
+  "description": "Just a string helper that helps _11042015",
+  "main": "dist/angular-string-helper.min.js",
+  "keywords": [
+    "angular",
+    "string",
+    "filters",
+    "helper"
+  ],
+  "authors": [
+    "Rexon A. De los Reyes <rexondelosreyes88@gmail.com>"
+  ],
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-rename": "^1.2.2",
