--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "AngularJs String Helper",
+  "name": "angular-string-helper",
   "version": "1.0.1",
   "authors": [
     "Rexon A. De los Reyes <rexondelosreyes88@gmail.com>"
