Added startsWith, endsWith, contains functions and ordinal function minor fixes

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "filters",
     "helper"
   ],
+  "license": "MIT",
   "authors": [
     "Rexon A. De los Reyes <rexondelosreyes88@gmail.com>"
   ],
