--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-string-helper",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Just a string helper that helps _11042015",
   "main": "dist/angular-string-helper.min.js",
   "keywords": [
@@ -13,6 +13,9 @@
   "authors": [
     "Rexon A. De los Reyes <rexondelosreyes88@gmail.com>"
   ],
+  "bugs": {
+    "url": "https://github.com/xrexonx/angular-string-helper/issues"
+  },
   "dependencies": {
     "angular": "~1.4.7"
   },
